# exploring-webassembly-with-spin

./: package.json  pnpm-lock.yaml
bluesky-webcomponent/: .gitignore  package-lock.json
bluesky-webcomponent/backend/: package-lock.json  package.json  spin.toml
bluesky-webcomponent/dev/: index.html
bluesky-webcomponent/src/: bluesky.ts
go-sdk/: README.md  go.mod  main.go  spin.toml
nodejs-sdk/: README.md  package.json  pnpm-lock.yaml  spin.toml
nodejs-sdk/src/: index.ts
oci-registry/: Cargo.toml  Dockerfile  Justfile  spin.toml
oci-registry/src/: lib.rs
planetscale/: .env  .envrc  package.json  pnpm-lock.yaml  spin.toml  tsconfig.json
planetscale/prisma/: schema.prisma
planetscale/src/: index.ts
python-sdk/: .gitignore  README.md  app.py  spin.toml
real-app-openai-language-guesser/: .envrc  package-lock.json  package.json  pnpm-lock.yaml  spin.toml  webpack.config.js
real-app-openai-language-guesser/frontend/: index.html
real-app-openai-language-guesser/frontendv2/: package.json  pnpm-lock.yaml
real-app-openai-language-guesser/src/: index.js
rust-sdk/: Cargo.toml  README.md  spin.toml
rust-sdk/src/: lib.rs
shim-this-way/: Dockerfile  Justfile  spin.toml
shim-this-way/echo/: .gitignore  package-lock.json  package.json
shim-this-way/hello/: Cargo.toml
universal-validation/backend/: Cargo.toml  spin.toml  test.hurl
universal-validation/domain/: Cargo.toml
universal-validation/wasm/: Cargo.toml  Makefile
universal-validation/wasm/src/: lib.rs
universal-validation/web/: package-lock.json  package.json  webpack.config.js
(+21 files in other folders)
